Criando variável das cores

--- a/login.html
+++ b/login.html
@@ -11,13 +11,15 @@
     <!-- 1) SETTINGS -->
     <link rel="stylesheet" href="style/settings/core.css">
     <link rel="stylesheet" href="style/settings/wrapper.css">
+    <link rel="stylesheet" href="style/settings/color.css">
 
     <!-- 2) GENERIC -->
     <link rel="stylesheet" href="style/generic/reset.css" >
     <link rel="stylesheet" href="style/generic/box-sizing.css" >
 
     <!-- 3) BASE -->
-
+    <link rel="stylesheet" href="style/base/html.css" >
+    
     <!-- 4) OBJECTS -->
 
     <!-- 5) COMPONENTS -->
