--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 
     <!-- 3) BASE -->
     <link rel="stylesheet" href="style/base/html.css" >
-    
+
     <!-- 4) OBJECTS -->
 
     <!-- 5) COMPONENTS -->
@@ -36,7 +36,9 @@
 
             <header class="ld-header"> 
                 <div class="wrapper">
-                    Conteúdo header
+                    <div class="image-wrapper">
+                        <img class="image" src="assets/logo/devfreela.svg" >
+                    </div>
                 </div>    
                 
             </header>
